	o #407538: Ensure views_break_phrase() will stop providing warnings on empty strings.
	o #420850 by dereine: Commas should not be used to separate items in a profile list field.
	o #482162 by agentrickard: link path needed further sanitization to properly encode special characters.
	o Tables would not accept 0 as having data so columns with zeroes would lose data when merging with other columns.

  Other changes:
    o Implement a post_render hook (for themes too) and cache method.
	o #501552 by neclimdul: Work around a core bug with DISTINCT on nodes.
	o #430068 by overall and aclight: Improvements to the global "counter" field.
	o #492002 by iterato: Allow "target" specification in field linking.
	o #466454 by neclimdul: PHP strict fixes.
	o Can now directly add a taxonomy term relationship to nodes, allowing more control by vocabulary.
	o #472194: !1 can now be used with field rewriting to get the raw argument.
	o #480162: Fields row style now contains option to hide empty fields.
	o #433318: Special handling for empty fields, allowing them to avoid rewriting and not be displayed.

Views 2.6
  Bugs fixed:
    o #419226 by kelvincool: Respect admin theme during views ajax operations.
    o #419270 by voxpelli: set_where_group() could fail if no previous groups.
    o #422054 by yhahn: Protect exports from impropertly indenting multiline strings.
    o #437070 by mikeryan: Base table formerly limited to 32 characters.
    o #317271 by quicksketch: ensure_my_table() limited to one relationship per table.
    o #441520 by jonathan1055: Allow the "time ago" date format to work on future dates as well.
    o #445398 by casey: reduce_value_options() using wrong value array.
    o #451370 by skwashd: base.js had some DOS line endings.
    o #454754 by dww: Fix PGSQL related errors with comment author filtering.
    o #384286 by dww: Make it possible to expose the filter for "Node: Has new content"
    o #463634 by alienbrain: "Empty field name" incorrectly specified.