@@ -1,5 +1,5 @@
 <?php
-// $Id: views_handler_field_profile_list.inc,v 1.3 2009-07-01 23:07:14 merlinofchaos Exp $
+// $Id: views_handler_field_profile_list.inc,v 1.4 2009-07-26 15:07:26 merlinofchaos Exp $
 /**
  * Field handler display a profile list item.
  */
@@ -12,7 +12,7 @@ class views_handler_field_profile_list extends views_handler_field_prerender_lis
     $this->items[$field] = array();
     foreach (split("[\n\r]", $field) as $item) {
       if ($item != '' && $item !== NULL) {
-        $this->items[$field]['item']] = $item;
+        $this->items[$field]['item'] = $item;
       }
     }
   }
